--- a/container/about.html
+++ b/container/about.html
@@ -229,7 +229,7 @@
 <!-- /funfacts -->
 
 <!-- success story -->
-<section class="section bg-cover" data-background="images/backgrounds/success-story.jpg">
+<section class="section bg-cover" data-background="https://www.shutterstock.com/image-photo/success-story-concept-260nw-589628849.jpg">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-sm-4 position-relative success-video">
@@ -259,10 +259,10 @@
         <!-- teacher -->
         <div class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
           <div class="card border-0 rounded-0 hover-shadow">
-            <img class="card-img-top rounded-0" src="images/teachers/teacher-1.jpg" alt="teacher">
+            <img class="card-img-top rounded-0" src="https://apicms.thestar.com.my/uploads/images/2022/05/15/1585587.jpg" alt="teacher">
             <div class="card-body">
               <a href="teacher-single.html">
-                <h4 class="card-title">Jacke Masito</h4>
+                <h4 class="card-title">Jackline Masito</h4>
               </a>
               <div class="d-flex justify-content-between">
                 <span>Teacher</span>
@@ -279,7 +279,7 @@
         <!-- teacher -->
         <div class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
           <div class="card border-0 rounded-0 hover-shadow">
-            <img class="card-img-top rounded-0" src="images/teachers/teacher-2.jpg" alt="teacher">
+            <img class="card-img-top rounded-0" src="https://st.depositphotos.com/1000393/2442/i/950/depositphotos_24423177-stock-photo-teacher-at-work.jpg" alt="teacher">
             <div class="card-body">
               <a href="teacher-single.html">
                 <h4 class="card-title">Clark Malik</h4>
@@ -299,10 +299,10 @@
         <!-- teacher -->
         <div class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
           <div class="card border-0 rounded-0 hover-shadow">
-            <img class="card-img-top rounded-0" src="images/teachers/teacher-3.jpg" alt="teacher">
+            <img class="card-img-top rounded-0" src="https://d19d5sz0wkl0lu.cloudfront.net/dims4/default/0c8a0a3/2147483647/thumbnail/1000x1000%3E/quality/90/?url=https%3A%2F%2Fatd-brightspot.s3.amazonaws.com%2F7f%2F38%2Fb37d0d6148e48fea8f76209eb3bb%2Fbigstock-pretty-teacher-smiling-at-came-69887626-1.jpg" alt="teacher">
             <div class="card-body">
               <a href="teacher-single.html">
-                <h4 class="card-title">John Doe</h4>
+                <h4 class="card-title">Jashmin Doe</h4>
               </a>
               <div class="d-flex justify-content-between">
                 <span>Teacher</span>
